committing to make PR

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
             </g>
         </svg>
 </header>
-    <title>React App</title>
+    <title>Shift Gear</title>
   </head>
   <body>
     <noscript>
